--- a/data/cards/11825276.yaml
+++ b/data/cards/11825276.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2 "Ninja" monsters with different Types
-    Must first be either Fusion Summoned, or Special Summoned from your Extra Deck by Tributing the above cards. Your "Ninja" monsters can attack directly. Cannot be targeted for attacks while you control a face-down Defense Position monster. When your opponent activates a card or effect (Quick Effect): You can Special Summon 1 "Ninja" monster from your Deck in face-up or face-down Defense Position. You can only use this effect of "War Ninja Meisen" once per turn.
+    Must first be either Fusion Summoned, or Special Summoned from your Extra Deck by Tributing the above cards. Your "Ninja" monsters can attack directly. Monsters cannot target this card for attacks while you control a face-down Defense Position monster. When your opponent activates a card or effect (Quick Effect): You can Special Summon 1 "Ninja" monster from your Deck in face-up or face-down Defense Position. You can only use this effect of "War Ninja Meisen" once per turn.
   de:
   es:
   fr:
