--- a/data/cards/52119435.yaml
+++ b/data/cards/52119435.yaml
@@ -12,7 +12,7 @@ name:
   ko: 전정의 코디네랄
   ko_rr:
   zh-TW:
-  zh-CN: 转晶之矿物协调者
+  zh-CN: 转晶之石装调整者
 text:
   en: |-
     2 Effect Monsters
@@ -41,9 +41,7 @@ text:
   zh-TW:
   zh-CN: |-
     效果怪兽2只
-    这个卡名的②的效果1回合只能使用1次。
-    ①：连接状态的这张卡以及这张卡所连接区的怪兽不会被对方的效果破坏。
-    ②：这张卡所连接区有怪兽2只存在的场合才能发动。那2只怪兽的控制权交换。
+    此卡名的②效果1回合仅可使用1次。①：连接状态的此卡及此卡连接端的怪兽不会因对手的效果被破坏。②：此卡的连接端有2只怪兽存在的情况下可以发动。交换该2只怪兽的控制权。
 card_type: Monster
 monster_type_line: Rock / Link / Effect
 attribute: EARTH
@@ -128,3 +126,8 @@ sets:
     set_name: Phantom Rage
     rarities:
     - Common
+  zh-CN:
+  - set_number: MGP5-SC096
+    set_name: Mega Pack 05
+    rarities:
+    - Prismatic Secret Rare
