--- a/data/cards/56824871.yaml
+++ b/data/cards/56824871.yaml
@@ -12,7 +12,7 @@ name:
   ko: 불꽃성기사－리나르도
   ko_rr: Bulkkotseonggisa - Rinareudo
   zh-TW:
-  zh-CN: 焰圣骑士-里纳尔多
+  zh-CN: 焰圣骑士－里纳尔多
 text:
   en: |-
     If you control a FIRE Warrior monster, you can Special Summon this card (from your hand). If Summoned this way, treat this card as a Tuner. You can only Special Summon "Infernoble Knight - Renaud" once per turn this way. If this card is Special Summoned: You can target 1 of your FIRE Warrior monsters, or 1 of your Equip Spells, that is banished or in your GY, except "Infernoble Knight - Renaud"; add it to your hand. You can only use this effect of "Infernoble Knight - Renaud" once per turn.
@@ -32,9 +32,7 @@ text:
     이 카드명의, ①의 방법에 의한 특수 소환은 1턴에 1번밖에 할 수 없으며, ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드에 전사족 / 화염 속성 몬스터가 존재할 경우, 이 카드는 패에서 특수 소환할 수 있다. 이 방법으로 특수 소환한 이 카드는 튜너로 취급한다. ②: 이 카드가 특수 소환에 성공했을 경우, 자신 묘지의 카드 및 제외되어 있는 자신의 카드 중에서, "불꽃성기사－리나르도" 이외의 전사족 / 화염 속성 몬스터 1장 또는 장착 마법 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드를 패에 넣는다.
   zh-TW:
   zh-CN: |-
-    这个卡名的作为①的方法的特殊召唤1回合只能有1次，作为②的效果1回合只能使用1次。
-    ①：自己场上有战士族·炎属性怪兽存在的场合，这张卡可以从手卡特殊召唤。这个方法特殊召唤的这张卡当作调整使用。
-    ②：这张卡特殊召唤成功的场合，从自己墓地的卡以及除外的自己的卡之中以「焰圣骑士-里纳尔多」以外的1只战士族·炎属性怪兽或者1张装备魔法卡为对象才能发动。那张卡加入手卡。
+    此卡名以①方法的特殊召唤1回合仅可进行1次，且②效果1回合仅可使用1次。①：自己场上有战士族・炎属性怪兽存在的情况下，此卡可从手牌中特殊召唤。以此方法特殊召唤的此卡视为协调。②：此卡特殊召唤成功的情况下，从自己墓地的卡及自己被除外的卡中，以1只"焰圣骑士－里纳尔多"以外的战士族・炎属性怪兽或1张装备魔法卡为对象可以发动。将该卡加入手牌。
 card_type: Monster
 monster_type_line: Warrior / Effect
 attribute: FIRE
@@ -89,3 +87,8 @@ sets:
     - Normal Parallel Rare
     - Ultra Rare
     - Secret Rare
+  zh-CN:
+  - set_number: MGP5-SC179
+    set_name: Mega Pack 05
+    rarities:
+    - Super Rare
