--- a/data/cards/58363151.yaml
+++ b/data/cards/58363151.yaml
@@ -12,7 +12,7 @@ name:
   ko: <ruby>S－Force<rt>시큐리티 포스</rt></ruby> 플라＝티나
   ko_rr: Sikyuriti Poseu Peulla=Tina
   zh-TW:
-  zh-CN: 治安战警队 铂金女
+  zh-CN: 超元特防队 白金蒂娜
 text:
   en: |-
     Each of your opponent's monsters in the same column as one of your "S-Force" monsters loses 600 ATK. If this card is Normal or Special Summoned: You can target 1 of your banished "S-Force" monsters, except "S-Force Pla-Tina"; Special Summon it. You can only use this effect of "S-Force Pla-Tina" once per turn.
@@ -32,9 +32,7 @@ text:
     이 카드명의 ①의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 일반 소환 / 특수 소환에 성공했을 경우, "S－Force(시큐리티 포스) 플라＝티나" 이외의 제외되어 있는 자신의 "S－Force(시큐리티 포스)" 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 특수 소환한다. ②: 이 카드가 몬스터 존에 존재하는 한, 자신의 "S－Force(시큐리티 포스)" 몬스터 정면의 상대 몬스터의 공격력은 600 내린다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①的效果1回合只能使用1次。
-    ①：这张卡召唤·特殊召唤成功的场合，以「治安战警队 铂金女」以外的除外的1只自己的「治安战警队」怪兽为对象才能发动。那只怪兽特殊召唤。
-    ②：只要这张卡在怪兽区域存在，自己的「治安战警队」怪兽的正对面的对方怪兽的攻击力下降600。
+    此卡名的①效果1回合仅可使用1次。①：此卡召唤・特殊召唤成功的情况下，以自己1只"超元特防队 白金蒂娜"以外的、被除外的"超元特防队"怪兽为对象可以发动。将该怪兽特殊召唤。②：只要此卡存在于怪兽区域，自己的"超元特防队"怪兽正面的对手怪兽的攻击力下降600。
 card_type: Monster
 monster_type_line: Spellcaster / Effect
 attribute: DARK
@@ -79,3 +77,8 @@ sets:
     set_name: Blazing Vortex
     rarities:
     - Rare
+  zh-CN:
+  - set_number: MGP5-SC125
+    set_name: Mega Pack 05
+    rarities:
+    - Super Rare
