--- a/data/cards/16312943.yaml
+++ b/data/cards/16312943.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN: 书灵师 烈火
+  zh-CN: 书灵师 热血少年
 text:
   en: |-
     You can reveal 1 Ritual Monster in your hand: Special Summon this card from your hand. If this card is Special Summoned: You can add 1 "Libromancer" monster from your Deck to your hand, except "Libromancer Fire". You can only use each effect of "Libromancer Fire" once per turn.
