--- a/data/cards/88106656.yaml
+++ b/data/cards/88106656.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN: 书灵师 烈火炸裂者
+  zh-CN: 书灵师 爆火者
 text:
   en: |-
     You can Ritual Summon this card with a "Libromancer" card. If this card was Ritual Summoned by using a monster(s) on the field, it cannot be destroyed by battle, also any battle damage it inflicts to your opponent is doubled. This card can make up to 2 attacks on monsters during each Battle Phase. When a monster declares an attack: You can banish 1 "Libromancer" Ritual Monster from your GY; this card gains 200 ATK.
