--- a/data/cards/14602126.yaml
+++ b/data/cards/14602126.yaml
@@ -109,6 +109,9 @@ sets:
     set_name: Phantom Rage
     rarities:
     - Common
+  - set_number: DBAD-JP044
+    set_name: 'Deck Build Pack: Amazing Defenders'
+    rarities:
   ko:
   - set_number: PHRA-KR066
     set_name: Phantom Rage
