--- a/data/cards/35334193.yaml
+++ b/data/cards/35334193.yaml
@@ -12,7 +12,7 @@ name:
   ko: <ruby>S－Force<rt>시큐리티 포스</rt></ruby> 저스티파이
   ko_rr: Sikyuriti Poseu Jeoseutipai
   zh-TW:
-  zh-CN: 治安战警队 正名者
+  zh-CN: 超元特防队 证义
 text:
   en: |-
     3 Effect Monsters, including an "S-Force" monster
@@ -40,10 +40,8 @@ text:
     자신은 이 카드의 링크 앞에 몬스터를 낼 수 없다. 이 카드명의 ①의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 자신 / 상대 턴에 상대 필드의 효과 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터의 효과를 턴 종료시까지 무효로 한다. 그 후, 그 상대 몬스터를 이 카드의 링크 앞이 되는 상대 몬스터 존으로 이동할 수 있다. ②: 이 카드가 공격하는 데미지 스텝 개시시에 발동할 수 있다. 이 카드의 링크 앞의 몬스터를 전부 제외한다.
   zh-TW:
   zh-CN: |-
-    包含「治安战警队」怪兽的效果怪兽3只
-    自己不能在这张卡所连接区让怪兽出现。这个卡名的①的效果1回合只能使用1次。
-    ①：自己·对方回合，以对方场上1只效果怪兽为对象才能发动。那只怪兽的效果直到回合结束时无效。那之后，可以让那只对方怪兽向作为这张卡所连接区的对方的怪兽区域移动。
-    ②：这张卡攻击的伤害步骤开始时才能发动。这张卡所连接区的怪兽全部除外。
+    包括"超元特防队"怪兽在内的效果怪兽3只
+    自己不可将怪兽出到此卡的连接端。此卡名的①效果1回合仅可使用1次。①：在自己・对手回合中，以对手场上的1只效果怪兽为对象可以发动。将该怪兽的效果直至回合结束时为止无效。然后，可将该对手怪兽移动至此卡连接端的对手怪兽区域。②：此卡攻击的伤害步骤开始时可以发动。将此卡连接端的怪兽全部除外。
 card_type: Monster
 monster_type_line: Cyberse / Link / Effect
 attribute: LIGHT
@@ -107,3 +105,8 @@ sets:
     rarities:
     - Ultra Rare
     - Prismatic Secret Rare
+  zh-CN:
+  - set_number: MGP5-SC143
+    set_name: Mega Pack 05
+    rarities:
+    - Secret Rare
