--- a/data/cards/49088914.yaml
+++ b/data/cards/49088914.yaml
@@ -12,7 +12,7 @@ name:
   ko: 전뇌계원-루루
   ko_rr:
   zh-TW:
-  zh-CN: 电脑堺媛-瑞瑞
+  zh-CN: 电脑堺媛－瑞瑞
 text:
   en: |-
     If this card is in your hand: You can target 1 "Virtual World" card you control; send 1 "Virtual World" card of a different type (Monster, Spell, Trap) from your Deck to the GY, and if you do, Special Summon this card, then, you can add 1 "Virtual World" card of the third type from your Deck to your hand, except "Virtual World Mai-Hime - Lulu". For the rest of this turn, you can only Special Summon Level/Rank 3 or higher monsters. You can only use this effect of "Virtual World Mai-Hime - Lulu" once per turn.
@@ -32,8 +32,7 @@ text:
     이 카드명의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 패에 존재할 경우, 자신 필드의 "전뇌계" 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드와는 종류(몬스터 / 마법 / 함정)가 다른 "전뇌계" 카드 1장을 덱에서 묘지로 보내고, 이 카드를 특수 소환한다. 그 후, 대상의 카드 및 묘지로 보낸 카드와는 종류가 다른 "전뇌계원-루루" 이외의 "전뇌계" 카드 1장을 덱에서 패에 넣을 수 있다. 이 턴에, 자신은 레벨 또는 랭크가 3 이상인 몬스터밖에 특수 소환할 수 없다.
   zh-TW:
   zh-CN: |-
-    这个卡名的效果1回合只能使用1次。
-    ①：这张卡在手卡存在的场合，以自己场上1张「电脑堺」卡为对象才能发动。和那张卡种类（怪兽·魔法·陷阱）不同的1张「电脑堺」卡从卡组送去墓地，这张卡特殊召唤。那之后，可以把和作为对象的卡以及送去墓地的卡种类不同的1张「电脑堺媛-瑞瑞」以外的「电脑堺」卡从卡组加入手卡。这个回合，自己若非等级或者阶级是3以上的怪兽则不能特殊召唤。
+    此卡名的效果1回合仅可使用1次。①：在此卡存在于手牌中的情况下，以自己场上的1张"电脑堺"卡为对象可以发动。从牌组将1张种类（怪兽・魔法・陷阱）与该卡不同的"电脑堺"卡送至墓地，将此卡特殊召唤。然后，可从牌组将1张种类与对象卡及送至墓地的卡不同的、"电脑堺媛－瑞瑞"以外的"电脑堺"卡加入手牌。此回合，自己仅可特殊召唤等级或阶级为3以上的怪兽。
 card_type: Monster
 monster_type_line: Psychic / Tuner / Effect
 attribute: WIND
@@ -111,4 +110,9 @@ sets:
     set_name: Phantom Rage +1 Bonus Pack
     rarities:
     - Super Rare
+    - Prismatic Secret Rare
+  zh-CN:
+  - set_number: MGP5-SC073
+    set_name: Mega Pack 05
+    rarities:
     - Prismatic Secret Rare
