--- a/data/cards/63821877.yaml
+++ b/data/cards/63821877.yaml
@@ -12,7 +12,7 @@ name:
   ko: 팬텀 나이츠 래기드글로브
   ko_rr:
   zh-TW:
-  zh-CN: 魅影骑士团无声靴
+  zh-CN: 魅影骑士团破手套
 text:
   en: |-
     A DARK Xyz Monster that was Summoned using this card on the field as material gains this effect.
@@ -44,7 +44,7 @@ text:
     "팬텀 나이트 래기드글로브"의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 필드의 이 카드를 소재로서 엑시즈 소환한 어둠 속성 몬스터는 이하의 효과를 얻는다. ●이 엑시즈 소환에 성공했을 경우에 발동한다. 이 카드의 공격력은 1000 올린다. ②: 묘지의 이 카드를 제외하고 발동할 수 있다. 덱에서 "팬텀 나이츠" 카드 또는 "팬텀" 마법 / 함정 카드 1장을 묘지로 보낸다.
   zh-TW:
   zh-CN: |-
-    此卡名以①方法的特殊召唤1回合仅可进行1次，且②效果1回合仅可使用1次。①：自己场上有"魅影骑士团"怪兽存在的情况下，此卡可从手牌中特殊召唤。②：将墓地的此卡除外可以发动。从牌组将1张"魅影"魔法・陷阱卡加入手牌。
+    此卡名的①②效果1回合仅可各使用1次。①：以场上的此卡作为素材超量召唤的暗属性怪兽获得以下效果。●此超量召唤成功的情况下发动。此卡的攻击力上升1000。②：将墓地的此卡除外可以发动。从牌组将1张“魅影骑士团”卡或“魅影”魔法·陷阱卡送至墓地。
 card_type: Monster
 monster_type_line: Warrior / Effect
 attribute: DARK
