--- a/data/cards/92519087.yaml
+++ b/data/cards/92519087.yaml
@@ -12,7 +12,7 @@ name:
   ko: 전뇌계호-셴셴
   ko_rr:
   zh-TW:
-  zh-CN: 电脑堺狐-仙仙
+  zh-CN: 电脑堺狐－仙仙
 text:
   en: |-
     1 Tuner + 1+ non-Tuner monsters
@@ -40,11 +40,8 @@ text:
     이 카드명의 ②③의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 필드에서 묘지로 보내지는 카드는 묘지로는 가지 않고 제외된다. ②: 자신 몬스터의 공격 선언시에 발동할 수 있다. 제외되어 있는 자신 또는 상대 몬스터 1장을 묘지로 되돌린다. ③: 이 카드 이외의, 원래의 종족 / 속성이 다른 몬스터 2장을 자신 묘지에서 제외하고 발동할 수 있다. 이 카드를 묘지에서 특수 소환한다. 이 효과는 이 카드가 묘지로 보내진 턴에는 발동할 수 없다.
   zh-TW:
   zh-CN: |-
-    调整＋调整以外的怪兽1只以上
-    这个卡名的②③的效果1回合各能使用1次。
-    ①：从场上送去墓地的卡不去墓地而除外。
-    ②：自己怪兽的攻击宣言时才能发动。选除外的1只自己或者对方的怪兽回到墓地。
-    ③：把这张卡以外的2只原本的种族·属性不同的怪兽从自己墓地除外才能发动。这张卡从墓地特殊召唤。这个效果在这张卡送去墓地的回合不能发动。
+    协调＋1只以上协调以外的怪兽
+    此卡名的②③效果1回合仅可各使用1次。①：从场上被送至墓地的卡不去墓地而直接被除外。②：自己怪兽的攻击宣言时可以发动。挑选自己或对手1只被除外的怪兽放回墓地。③：从自己的墓地将此卡以外的2只原本种族・属性不同的怪兽除外可以发动。从墓地将此卡特殊召唤。此效果在此卡被送至墓地的回合不可发动。
 card_type: Monster
 monster_type_line: Psychic / Synchro / Effect
 attribute: WIND
@@ -126,3 +123,8 @@ sets:
     rarities:
     - Ultra Rare
     - Prismatic Secret Rare
+  zh-CN:
+  - set_number: MGP5-SC085
+    set_name: Mega Pack 05
+    rarities:
+    - Secret Rare
