--- a/data/cards/98127546.yaml
+++ b/data/cards/98127546.yaml
@@ -12,7 +12,7 @@ name:
   ko: 사로스＝에레스 쿠르누기아스
   ko_rr: Saroseu=Ereseu Kureunugiaseu
   zh-TW:
-  zh-CN: 闭锁世界的冥神
+  zh-CN: 闭界冥神 蚀日的埃列丝
 text:
   en: |-
     4+ Effect Monsters
@@ -41,10 +41,7 @@ text:
   zh-TW:
   zh-CN: |-
     效果怪兽4只以上
-    这张卡连接召唤的场合，对方场上的怪兽也能有最多1只作为连接素材。
-    ①：这张卡连接召唤成功的场合才能发动。对方场上的全部表侧表示怪兽的效果无效化。
-    ②：连接召唤的这张卡不受除以这张卡为对象的效果以外的对方的所发动的效果影响。
-    ③：1回合1次，包含从墓地把怪兽特殊召唤效果的魔法·陷阱·怪兽的效果由对方发动时才能发动。那个发动无效。
+    在要将此卡连接召唤的情况下，也可将对手场上最多1只怪兽作为连接素材。①：此卡连接召唤成功的情况下可以发动。对手场上所有表侧表示怪兽的效果无效化。②：连接召唤的此卡不受对手发动的效果影响，除了以此卡为对象的效果以外。③：1回合1次，对手发动包含从墓地将怪兽特殊召唤的效果的、魔法・陷阱・怪兽的效果时可以发动。将该发动无效。
 card_type: Monster
 monster_type_line: Fiend / Link / Effect
 attribute: LIGHT
@@ -109,4 +106,9 @@ sets:
     set_name: Blazing Vortex +1 Bonus Pack
     rarities:
     - Ultra Rare
+    - Prismatic Secret Rare
+  zh-CN:
+  - set_number: MGP5-SC144
+    set_name: Mega Pack 05
+    rarities:
     - Prismatic Secret Rare
