--- a/data/cards/20799347.yaml
+++ b/data/cards/20799347.yaml
@@ -12,7 +12,7 @@ name:
   ko: 전뇌계상－투투
   ko_rr: Jeonnoegyesang - Tutu
   zh-TW:
-  zh-CN: 电脑堺嫦-兔兔
+  zh-CN: 电脑堺嫦－兔兔
 text:
   en: |-
     If you control no monsters, or all monsters you control are Psychic and/or Wyrm monsters, you can Normal Summon this card without Tributing. If this card is in your GY: You can discard 1 Psychic or Wyrm monster; Special Summon this card as a Tuner, but banish it when it leaves the field, also for the rest of this turn, you can only Special Summon Level/Rank 3 or higher monsters. You can only use this effect of "Virtual World Oto-Hime - Toutou" once per turn.
@@ -32,9 +32,7 @@ text:
     이 카드명의 ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드의 몬스터가, 존재하지 않을 경우 또는 사이킥족 / 환룡족 몬스터뿐일 경우, 이 카드는 릴리스 없이 일반 소환할 수 있다. ②: 이 카드가 묘지에 존재할 경우, 패에서 사이킥족 / 환룡족 몬스터 1장을 버리고 발동할 수 있다. 이 카드를 튜너로 취급하여 특수 소환한다. 이 효과로 특수 소환한 이 카드는, 필드에서 벗어났을 경우에 제외된다. 이 턴에, 자신은 레벨 또는 랭크가 3 이상인 몬스터밖에 특수 소환할 수 없다.
   zh-TW:
   zh-CN: |-
-    这个卡名的②的效果1回合只能使用1次。
-    ①：自己场上的怪兽不存在的场合或者只有念动力族·幻龙族怪兽的场合，这张卡可以不用解放作召唤。
-    ②：这张卡在墓地存在的场合，从手卡丢弃1只念动力族·幻龙族怪兽才能发动。这张卡当作调整使用特殊召唤。这个效果特殊召唤的这张卡从场上离开的场合除外。这个回合，自己若非等级或者阶级是3以上的怪兽则不能特殊召唤。
+    此卡名的②效果1回合仅可使用1次。①：自己场上没有怪兽存在的情况下，或仅有念动力族・幻龙族怪兽的情况下，此卡无需解放即可召唤。②：此卡存在于墓地的情况下，从手牌将1只念动力族・幻龙族怪兽舍弃可以发动。将此卡视为协调特殊召唤。以此效果特殊召唤的此卡离开场上的情况下，将其除外。此回合，自己仅可特殊召唤等级或阶级为3以上的怪兽。
 card_type: Monster
 monster_type_line: Wyrm / Effect
 attribute: EARTH
@@ -80,3 +78,8 @@ sets:
     rarities:
     - Super Rare
     - Secret Rare
+  zh-CN:
+  - set_number: MGP5-SC184
+    set_name: Mega Pack 05
+    rarities:
+    - Super Rare
