--- a/data/cards/03629090.yaml
+++ b/data/cards/03629090.yaml
@@ -66,6 +66,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: LART-EN050
+    set_name: The Lost Art Promotion 2022 H
+    rarities:
+    - Ultra Rare
   de:
   - set_number: DRL3-DE013
     set_name: 'Dragons of Legend: Unleashed'
@@ -87,6 +91,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: LART-DE050
+    set_name: The Lost Art Promotion 2022 H
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: DRL3-FR013
     set_name: 'Dragons of Legend: Unleashed'
@@ -108,6 +116,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: LART-FR050
+    set_name: The Lost Art Promotion 2022 H
+    rarities:
+    - Ultra Rare
   it:
   - set_number: DRL3-IT013
     set_name: 'Dragons of Legend: Unleashed'
@@ -129,6 +141,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: LART-IT050
+    set_name: The Lost Art Promotion 2022 H
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: DRL3-PT013
     set_name: 'Dragons of Legend: Unleashed'
@@ -150,6 +166,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: LART-PT050
+    set_name: The Lost Art Promotion 2022 H
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: CPF1-JP013
     set_name: 'Collectors Pack: Duelist of Flash Version'
