--- a/data/cards/yugipedia895427.yaml
+++ b/data/cards/yugipedia895427.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>森<rt>もり</rt></ruby>の<ruby>聖<rt>せい</rt></ruby><ruby>獣<rt>じゅう</rt></ruby> キティテール
-  ja_romaji:
+  ja_romaji: Mori no Seijū Kititēru
   ko:
   ko_rr:
   zh-TW:
