--- a/data/cards/24299458.yaml
+++ b/data/cards/24299458.yaml
@@ -32,8 +32,7 @@ text:
     이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 자신의 패 / 필드에서, 이 카드 이외의 카드를 임의의 수만큼 묘지로 보내고 발동할 수 있다. 그 수만큼 상대 필드의 효과 몬스터를 고른다. 그 몬스터는 턴 종료시까지, 공격력이 절반이 되고, 효과는 무효화된다. 이 카드의 발동에 대하여, 상대는 이 카드를 발동하기 위해 묘지로 보낸 카드와 원래의 종류(몬스터 / 마법 / 함정)가 같은 카드 효과를 발동할 수 없다.
   zh-TW:
   zh-CN: |-
-    这个卡名的卡在1回合只能发动1张。
-    ①：从自己的手卡·场上把这张卡以外的卡任意数量送去墓地才能发动。选那个数量的对方场上的效果怪兽。那些怪兽直到回合结束时攻击力变成一半，效果无效化。对方不能对应这张卡的发动把原本种类（怪兽·魔法·陷阱）和为这张卡发动而送去墓地的卡相同的卡的效果发动。
+    此卡名的卡1回合仅可发动1张。①：从自己的手牌・场上，将此卡以外的任意数量的卡送至墓地可以发动。依送至墓地的数量挑选对手场上的效果怪兽。该怪兽直至回合结束时为止，攻击力变为一半，效果无效化。应对此卡的发动，对手不可发动与为发动此卡而送至墓地的卡原本种类（怪兽・魔法・陷阱）相同的卡的效果。
 card_type: Spell
 property: Quick-Play
 series:
@@ -150,4 +149,9 @@ sets:
     set_name: Rise of the Duelist +1 Bonus Pack
     rarities:
     - Super Rare
+    - Prismatic Secret Rare
+  zh-CN:
+  - set_number: MGP5-SC051
+    set_name: Mega Pack 05
+    rarities:
     - Prismatic Secret Rare
