--- a/data/cards/62941499.yaml
+++ b/data/cards/62941499.yaml
@@ -12,7 +12,7 @@ name:
   ko: 스프리건즈 십 익스브로울러
   ko_rr: Seupeurigeonjeu Sip Ikseubeuroulleo
   zh-TW:
-  zh-CN: 护宝炮妖船 喧闹探险者号
+  zh-CN: 守宝团・乘风舰 寻宝盈天号
 text:
   en: |-
     2+ Level 8 monsters
@@ -40,10 +40,8 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 상대 몬스터 존 또는 마법 & 함정 존을 1곳 지정하고 발동할 수 있다. 이 카드의 엑시즈 소재를 임의의 수만큼 제거하고, 그 수만큼, 지정한 존 및 그 전 / 후 / 옆의 존(몬스터 존 / 마법 & 함정 존)에 존재하는 카드 중에서, 상대의 카드를 골라 파괴한다. ②: 상대의 메인 페이즈 및 배틀 페이즈에 발동할 수 있다. 이 카드를 엔드 페이즈까지 제외한다.
   zh-TW:
   zh-CN: |-
-    8星怪兽×2只以上
-    这个卡名的①②的效果1回合各能使用1次。
-    ①：指定对方的怪兽区域或者魔法与陷阱区域1处才能发动。这张卡的超量素材任意数量取除，从指定的区域以及那些前面·后面·相邻的区域（怪兽区域·魔法与陷阱区域）存在的卡之中选那个数量的对方的卡破坏。
-    ②：对方的主要阶段以及战斗阶段才能发动。这张卡直到结束阶段除外。
+    等级8怪兽×2只以上
+    此卡名的①②效果1回合仅可各使用1次。①：指定1处对手的怪兽区域或魔法与陷阱区域可以发动。去除此卡任意数量的超量素材，从存在于指定区域及其前・后・相邻区域（怪兽区域・魔法与陷阱区域）的卡中，挑选与去除素材同样数量的对手的卡破坏。②：在对手的主要阶段及战斗阶段可以发动。将此卡直至结束阶段为止除外。
 card_type: Monster
 monster_type_line: Machine / Xyz / Effect
 attribute: FIRE
@@ -105,3 +103,8 @@ sets:
     rarities:
     - Ultra Rare
     - Prismatic Secret Rare
+  zh-CN:
+  - set_number: MGP5-SC141
+    set_name: Mega Pack 05
+    rarities:
+    - Secret Rare
