--- a/data/cards/20899496.yaml
+++ b/data/cards/20899496.yaml
@@ -32,8 +32,7 @@ text:
     이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 상대 묘지의 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 효과를 무효로 하여 자신 필드에 특수 소환한다. 그 후, 자신 및 상대 필드에서, 종족이 같아지는 몬스터를 1장씩 고르고 제외할 수 있다.
   zh-TW:
   zh-CN: |-
-    这个卡名的卡在1回合只能发动1张。
-    ①：以对方墓地1只怪兽为对象才能发动。那只怪兽效果无效在自己场上特殊召唤。那之后，可以从自己以及对方场上选种族相同的怪兽各1只除外。
+    此卡名的卡1回合仅可发动1张。①：以对手墓地的1只怪兽为对象可以发动。将该怪兽效果无效并特殊召唤至自己场上。然后可从自己及对手场上，挑选种族相同的怪兽各1只除外。
 card_type: Trap
 property: Normal
 sets:
@@ -114,3 +113,8 @@ sets:
     set_name: 'Structure Deck: Alba Strike'
     rarities:
     - Common
+  zh-CN:
+  - set_number: MGP5-SC062
+    set_name: Mega Pack 05
+    rarities:
+    - Super Rare
