--- a/data/cards/46700124.yaml
+++ b/data/cards/46700124.yaml
@@ -109,6 +109,10 @@ sets:
     rarities:
     - Common
   ko:
+  - set_number: YC1-KR001
+    set_name: Card Guide Book promotional cards
+    rarities:
+    - Super Rare
   - set_number: BP2-KR099
     set_name: Beginner's Edition 2
     rarities:
