--- a/data/cards/82956214.yaml
+++ b/data/cards/82956214.yaml
@@ -12,7 +12,7 @@ name:
   ko: 드래그마 퍼니시먼트
   ko_rr: Deuraegeuma Peonisimeonteu
   zh-TW:
-  zh-CN: 教导的惩罚
+  zh-CN: 教导惩戒
 text:
   en: |-
     Target 1 face-up monster your opponent controls; send 1 monster with an equal or higher ATK from your Extra Deck to the GY, and if you do, destroy that monster. Until the end of your next turn after this card resolves, you cannot Special Summon monsters from the Extra Deck. You can only activate 1 "Dogmatika Punishment" per turn.
@@ -32,8 +32,7 @@ text:
     이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 상대 필드의 앞면 표시 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터의 공격력 이상의 공격력을 가지는 몬스터 1장을 자신의 엑스트라 덱에서 묘지로 보내고, 대상 몬스터를 파괴한다. 이 카드의 발동 후, 다음 자신 턴의 종료시까지 자신은 엑스트라 덱에서 몬스터를 특수 소환할 수 없다.
   zh-TW:
   zh-CN: |-
-    这个卡名的卡在1回合只能发动1张。
-    ①：以对方场上1只表侧表示怪兽为对象才能发动。把持有那只怪兽的攻击力以上的攻击力的1只怪兽从自己的额外卡组送去墓地，作为对象的怪兽破坏。这张卡的发动后，直到下次的自己回合的结束时自己不能从额外卡组把怪兽特殊召唤。
+    此卡名的卡1回合仅可发动1张。①：以对手场上的1只表侧表示怪兽为对象可以发动。从自己的额外牌组将1只拥有该怪兽的攻击力以上攻击力的怪兽送至墓地，破坏对象怪兽。此卡发动后，直至下一个自己回合结束时为止，自己不可从额外牌组特殊召唤怪兽。
 card_type: Trap
 property: Normal
 series:
@@ -114,3 +113,8 @@ sets:
     set_name: Rise of the Duelist
     rarities:
     - Common
+  zh-CN:
+  - set_number: MGP5-SC055
+    set_name: Mega Pack 05
+    rarities:
+    - Prismatic Secret Rare
