--- a/data/cards/99518961.yaml
+++ b/data/cards/99518961.yaml
@@ -118,6 +118,10 @@ sets:
     rarities:
     - Common
   ko:
+  - set_number: YC1-KR002
+    set_name: Card Guide Book promotional cards
+    rarities:
+    - Super Rare
   - set_number: BP2-KR108
     set_name: Beginner's Edition 2
     rarities:
