--- a/data/cards/59464593.yaml
+++ b/data/cards/59464593.yaml
@@ -12,7 +12,7 @@ name:
   ko: 암드 드래곤 LV10
   ko_rr: Amdeu Deuraegon Rebel Ten
   zh-TW:
-  zh-CN: 武装龙 LV10
+  zh-CN: 武装龙 LV１０
 text:
   en: |-
     Cannot be Normal Summoned/Set. Must be Special Summoned (from your hand) by Tributing 1 "Armed Dragon LV7". You can send 1 card from your hand to the GY; destroy all face-up monsters your opponent controls.
@@ -32,7 +32,7 @@ text:
     이 카드는 통상 소환할 수 없다. 자신 필드의 "암드 드래곤 LV7" 1장을 릴리스했을 경우에만 특수 소환할 수 있다. ①: 패를 1장 묘지로 보내고 발동할 수 있다. 상대 필드의 앞면 표시 몬스터를 전부 파괴한다.
   zh-TW:
   zh-CN: |-
-    这张卡不能通常召唤。把自己场上存在的1只「武装龙 LV7」解放的场合才能特殊召唤。可以通过把1张手卡送去墓地，对方场上表侧表示存在的怪兽全部破坏。
+    此卡不可通常召唤。仅可在解放自己场上的1只"武装龙 LV７"的情况下特殊召唤。①：将1张手牌送至墓地可以发动。将对手场上的表侧表示怪兽全部破坏。
 card_type: Monster
 monster_type_line: Dragon / Effect
 attribute: WIND
@@ -134,3 +134,8 @@ sets:
     set_name: Blazing Vortex +1 Bonus Pack
     rarities:
     - Prismatic Secret Rare
+  zh-CN:
+  - set_number: MGP5-SC171
+    set_name: Mega Pack 05
+    rarities:
+    - Secret Rare
