--- a/data/cards/01329620.yaml
+++ b/data/cards/01329620.yaml
@@ -42,22 +42,27 @@ sets:
   - set_number: POTE-EN073
     set_name: Power of the Elements
     rarities:
+    - Common
   de:
   - set_number: POTE-DE073
     set_name: Power of the Elements
     rarities:
+    - Common
   fr:
   - set_number: POTE-FR073
     set_name: Power of the Elements
     rarities:
+    - Common
   it:
   - set_number: POTE-IT073
     set_name: Power of the Elements
     rarities:
+    - Common
   pt:
   - set_number: POTE-PT073
     set_name: Power of the Elements
     rarities:
+    - Common
   ja:
   - set_number: POTE-JP073
     set_name: Power of the Elements
