--- a/data/cards/01855886.yaml
+++ b/data/cards/01855886.yaml
@@ -46,6 +46,7 @@ sets:
   - set_number: POTE-EN024
     set_name: Power of the Elements
     rarities:
+    - Common
   de:
   - set_number: POTE-DE024
     set_name: Power of the Elements
