--- a/data/cards/37961969.yaml
+++ b/data/cards/37961969.yaml
@@ -46,22 +46,27 @@ sets:
   - set_number: POTE-EN013
     set_name: Power of the Elements
     rarities:
+    - Common
   de:
   - set_number: POTE-DE013
     set_name: Power of the Elements
     rarities:
+    - Common
   fr:
   - set_number: POTE-FR013
     set_name: Power of the Elements
     rarities:
+    - Common
   it:
   - set_number: POTE-IT013
     set_name: Power of the Elements
     rarities:
+    - Common
   pt:
   - set_number: POTE-PT013
     set_name: Power of the Elements
     rarities:
+    - Common
   ja:
   - set_number: POTE-JP013
     set_name: Power of the Elements
