--- a/data/cards/38436986.yaml
+++ b/data/cards/38436986.yaml
@@ -42,22 +42,27 @@ sets:
   - set_number: POTE-EN071
     set_name: Power of the Elements
     rarities:
+    - Common
   de:
   - set_number: POTE-DE071
     set_name: Power of the Elements
     rarities:
+    - Common
   fr:
   - set_number: POTE-FR071
     set_name: Power of the Elements
     rarities:
+    - Common
   it:
   - set_number: POTE-IT071
     set_name: Power of the Elements
     rarities:
+    - Common
   pt:
   - set_number: POTE-PT071
     set_name: Power of the Elements
     rarities:
+    - Common
   ja:
   - set_number: POTE-JP071
     set_name: Power of the Elements
