--- a/data/cards/42431833.yaml
+++ b/data/cards/42431833.yaml
@@ -42,22 +42,27 @@ sets:
   - set_number: POTE-EN056
     set_name: Power of the Elements
     rarities:
+    - Common
   de:
   - set_number: POTE-DE056
     set_name: Power of the Elements
     rarities:
+    - Common
   fr:
   - set_number: POTE-FR056
     set_name: Power of the Elements
     rarities:
+    - Common
   it:
   - set_number: POTE-IT056
     set_name: Power of the Elements
     rarities:
+    - Common
   pt:
   - set_number: POTE-PT056
     set_name: Power of the Elements
     rarities:
+    - Common
   ja:
   - set_number: POTE-JP056
     set_name: Power of the Elements
