--- a/data/cards/49928686.yaml
+++ b/data/cards/49928686.yaml
@@ -46,22 +46,27 @@ sets:
   - set_number: POTE-EN005
     set_name: Power of the Elements
     rarities:
+    - Common
   de:
   - set_number: POTE-DE005
     set_name: Power of the Elements
     rarities:
+    - Common
   fr:
   - set_number: POTE-FR005
     set_name: Power of the Elements
     rarities:
+    - Common
   it:
   - set_number: POTE-IT005
     set_name: Power of the Elements
     rarities:
+    - Common
   pt:
   - set_number: POTE-PT005
     set_name: Power of the Elements
     rarities:
+    - Common
   ja:
   - set_number: POTE-JP005
     set_name: Power of the Elements
