--- a/data/cards/72309040.yaml
+++ b/data/cards/72309040.yaml
@@ -54,6 +54,7 @@ sets:
   - set_number: POTE-EN000
     set_name: Power of the Elements
     rarities:
+    - Secret Rare
   de:
   - set_number: POTE-DESP1
     set_name: Power of the Elements Premiere! promotional card
@@ -62,6 +63,7 @@ sets:
   - set_number: POTE-DE000
     set_name: Power of the Elements
     rarities:
+    - Secret Rare
   fr:
   - set_number: POTE-FRSP1
     set_name: Power of the Elements Premiere! promotional card
@@ -70,6 +72,7 @@ sets:
   - set_number: POTE-FR000
     set_name: Power of the Elements
     rarities:
+    - Secret Rare
   it:
   - set_number: POTE-ITSP1
     set_name: Power of the Elements Premiere! promotional card
@@ -78,6 +81,7 @@ sets:
   - set_number: POTE-IT000
     set_name: Power of the Elements
     rarities:
+    - Secret Rare
   pt:
   - set_number: POTE-PTSP1
     set_name: Power of the Elements Premiere! promotional card
@@ -86,3 +90,4 @@ sets:
   - set_number: POTE-PT000
     set_name: Power of the Elements
     rarities:
+    - Secret Rare
