--- a/data/cards/74920585.yaml
+++ b/data/cards/74920585.yaml
@@ -42,22 +42,27 @@ sets:
   - set_number: POTE-EN072
     set_name: Power of the Elements
     rarities:
+    - Common
   de:
   - set_number: POTE-DE072
     set_name: Power of the Elements
     rarities:
+    - Common
   fr:
   - set_number: POTE-FR072
     set_name: Power of the Elements
     rarities:
+    - Common
   it:
   - set_number: POTE-IT072
     set_name: Power of the Elements
     rarities:
+    - Common
   pt:
   - set_number: POTE-PT072
     set_name: Power of the Elements
     rarities:
+    - Common
   ja:
   - set_number: POTE-JP072
     set_name: Power of the Elements
