--- a/data/cards/75922381.yaml
+++ b/data/cards/75922381.yaml
@@ -46,22 +46,27 @@ sets:
   - set_number: POTE-EN006
     set_name: Power of the Elements
     rarities:
+    - Common
   de:
   - set_number: POTE-DE006
     set_name: Power of the Elements
     rarities:
+    - Common
   fr:
   - set_number: POTE-FR006
     set_name: Power of the Elements
     rarities:
+    - Common
   it:
   - set_number: POTE-IT006
     set_name: Power of the Elements
     rarities:
+    - Common
   pt:
   - set_number: POTE-PT006
     set_name: Power of the Elements
     rarities:
+    - Common
   ja:
   - set_number: POTE-JP006
     set_name: Power of the Elements
