--- a/data/cards/76145933.yaml
+++ b/data/cards/76145933.yaml
@@ -46,6 +46,7 @@ sets:
   - set_number: POTE-EN003
     set_name: Power of the Elements
     rarities:
+    - Secret Rare
   de:
   - set_number: POTE-DE003
     set_name: Power of the Elements
