--- a/data/cards/00572850.yaml
+++ b/data/cards/00572850.yaml
@@ -46,22 +46,27 @@ sets:
   - set_number: POTE-EN014
     set_name: Power of the Elements
     rarities:
+    - Super Rare
   de:
   - set_number: POTE-DE014
     set_name: Power of the Elements
     rarities:
+    - Super Rare
   fr:
   - set_number: POTE-FR014
     set_name: Power of the Elements
     rarities:
+    - Super Rare
   it:
   - set_number: POTE-IT014
     set_name: Power of the Elements
     rarities:
+    - Super Rare
   pt:
   - set_number: POTE-PT014
     set_name: Power of the Elements
     rarities:
+    - Super Rare
   ja:
   - set_number: POTE-JP014
     set_name: Power of the Elements
