--- a/data/cards/02263869.yaml
+++ b/data/cards/02263869.yaml
@@ -41,26 +41,31 @@ sets:
     set_name: Power of the Elements
     rarities:
     - Secret Rare
+    - Starlight Rare
   de:
   - set_number: POTE-DE067
     set_name: Power of the Elements
     rarities:
     - Secret Rare
+    - Starlight Rare
   fr:
   - set_number: POTE-FR067
     set_name: Power of the Elements
     rarities:
     - Secret Rare
+    - Starlight Rare
   it:
   - set_number: POTE-IT067
     set_name: Power of the Elements
     rarities:
     - Secret Rare
+    - Starlight Rare
   pt:
   - set_number: POTE-PT067
     set_name: Power of the Elements
     rarities:
     - Secret Rare
+    - Starlight Rare
   ja:
   - set_number: POTE-JP067
     set_name: Power of the Elements
