--- a/data/cards/13533678.yaml
+++ b/data/cards/13533678.yaml
@@ -46,22 +46,27 @@ sets:
   - set_number: POTE-EN004
     set_name: Power of the Elements
     rarities:
+    - Super Rare
   de:
   - set_number: POTE-DE004
     set_name: Power of the Elements
     rarities:
+    - Super Rare
   fr:
   - set_number: POTE-FR004
     set_name: Power of the Elements
     rarities:
+    - Super Rare
   it:
   - set_number: POTE-IT004
     set_name: Power of the Elements
     rarities:
+    - Super Rare
   pt:
   - set_number: POTE-PT004
     set_name: Power of the Elements
     rarities:
+    - Super Rare
   ja:
   - set_number: POTE-JP004
     set_name: Power of the Elements
