--- a/data/cards/35405755.yaml
+++ b/data/cards/35405755.yaml
@@ -45,26 +45,31 @@ sets:
     set_name: Power of the Elements
     rarities:
     - Secret Rare
+    - Starlight Rare
   de:
   - set_number: POTE-DE031
     set_name: Power of the Elements
     rarities:
     - Secret Rare
+    - Starlight Rare
   fr:
   - set_number: POTE-FR031
     set_name: Power of the Elements
     rarities:
     - Secret Rare
+    - Starlight Rare
   it:
   - set_number: POTE-IT031
     set_name: Power of the Elements
     rarities:
     - Secret Rare
+    - Starlight Rare
   pt:
   - set_number: POTE-PT031
     set_name: Power of the Elements
     rarities:
     - Secret Rare
+    - Starlight Rare
   ja:
   - set_number: POTE-JP031
     set_name: Power of the Elements
