--- a/data/cards/37343995.yaml
+++ b/data/cards/37343995.yaml
@@ -47,26 +47,31 @@ sets:
     set_name: Power of the Elements
     rarities:
     - Secret Rare
+    - Starlight Rare
   de:
   - set_number: POTE-DE025
     set_name: Power of the Elements
     rarities:
     - Secret Rare
+    - Starlight Rare
   fr:
   - set_number: POTE-FR025
     set_name: Power of the Elements
     rarities:
     - Secret Rare
+    - Starlight Rare
   it:
   - set_number: POTE-IT025
     set_name: Power of the Elements
     rarities:
     - Secret Rare
+    - Starlight Rare
   pt:
   - set_number: POTE-PT025
     set_name: Power of the Elements
     rarities:
     - Secret Rare
+    - Starlight Rare
   ja:
   - set_number: POTE-JP025
     set_name: Power of the Elements
