--- a/data/cards/74078255.yaml
+++ b/data/cards/74078255.yaml
@@ -46,22 +46,27 @@ sets:
   - set_number: POTE-EN012
     set_name: Power of the Elements
     rarities:
+    - Common
   de:
   - set_number: POTE-DE012
     set_name: Power of the Elements
     rarities:
+    - Common
   fr:
   - set_number: POTE-FR012
     set_name: Power of the Elements
     rarities:
+    - Common
   it:
   - set_number: POTE-IT012
     set_name: Power of the Elements
     rarities:
+    - Common
   pt:
   - set_number: POTE-PT012
     set_name: Power of the Elements
     rarities:
+    - Common
   ja:
   - set_number: POTE-JP012
     set_name: Power of the Elements
