--- a/data/cards/88836438.yaml
+++ b/data/cards/88836438.yaml
@@ -72,22 +72,27 @@ sets:
   - set_number: POTE-EN057
     set_name: Power of the Elements
     rarities:
+    - Common
   de:
   - set_number: POTE-DE057
     set_name: Power of the Elements
     rarities:
+    - Common
   fr:
   - set_number: POTE-FR057
     set_name: Power of the Elements
     rarities:
+    - Common
   it:
   - set_number: POTE-IT057
     set_name: Power of the Elements
     rarities:
+    - Common
   pt:
   - set_number: POTE-PT057
     set_name: Power of the Elements
     rarities:
+    - Common
   ja:
   - set_number: POTE-JP057
     set_name: Power of the Elements
