--- a/data/cards/yugipedia888851.yaml
+++ b/data/cards/yugipedia888851.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If a "Rescue-ACE" monster(s) other than "Rescue-ACE Fire Attacker" is Normal or Special Summoned to your field: You can Special Summon this card from your hand. If a card(s) is added to your opponent's hand, except by drawing it: You can draw 2 cards, then discard 1 card. You can only use each effect of "Rescue-ACE Fire Attacker" once per turn.
+    If a "Rescue-ACE" monster(s) other than "Rescue-ACE Fire Attacker" is Normal or Special Summoned to your field (except during the Damage Step): You can Special Summon this card from your hand. If a card(s) is added to your opponent's hand, except by drawing it: You can draw 2 cards, then discard 1 card. You can only use each effect of "Rescue-ACE Fire Attacker" once per turn.
   de:
   es:
   fr:
