--- a/data/cards/yugipedia888852.yaml
+++ b/data/cards/yugipedia888852.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If a "Rescue-ACE" monster(s) other than "Rescue-ACE Fire Engine" is Normal or Special Summoned to your field: You can Special Summon this card from your hand. If a monster(s) is Special Summoned to your opponent's field: You can Special Summon 1 Level 4 or lower "Rescue-ACE" monster from your hand, Deck, or GY. You can only use each effect of "Rescue-ACE Fire Engine" once per turn.
+    If a "Rescue-ACE" monster(s) other than "Rescue-ACE Fire Engine" is Normal or Special Summoned to your field (except during the Damage Step): You can Special Summon this card from your hand. If a monster(s) is Special Summoned to your opponent's field (except during the Damage Step): You can Special Summon 1 Level 4 or lower "Rescue-ACE" monster from your hand, Deck, or GY. You can only use each effect of "Rescue-ACE Fire Engine" once per turn.
   de:
   es:
   fr:
