--- a/data/cards/yugipedia888853.yaml
+++ b/data/cards/yugipedia888853.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    You can banish 2 "Rescue-ACE" cards from your GY; Special Summon this card from your hand. During your Main Phase: You can Set up to 4 "Rescue-ACE" Quick-Play Spells and/or Normal Traps with different names directly from your Deck. If another card(s) you control leaves the field by an opponent's card effect: You can target 1 card on the field; destroy it. You can only use each effect of "Rescue-ACE Turbulance" once per turn.
+    You can banish 2 "Rescue-ACE" cards from your GY; Special Summon this card from your hand. During your Main Phase: You can Set up to 4 "Rescue-ACE" Quick-Play Spells and/or Normal Traps with different names directly from your Deck. If another card(s) you control leaves the field by an opponent's card effect (except during the Damage Step): You can target 1 card on the field; destroy it. You can only use each effect of "Rescue-ACE Turbulance" once per turn.
   de:
   es:
   fr:
