--- a/data/cards/yugipedia894426.yaml
+++ b/data/cards/yugipedia894426.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Equip only to a "Mikanko" monster. It cannot be destroyed by card effects. If a monster(s) is Special Summoned to your opponent's field: You can target 1 monster you control and 1 monster your opponent controls; return them to the hand. You can only use this effect of "Purifying Dance of the Mikanko" once per turn.
+    Equip only to a "Mikanko" monster. It cannot be destroyed by card effects. If a monster(s) is Special Summoned to your opponent's field (except during the Damage Step): You can target 1 monster you control and 1 monster your opponent controls; return them to the hand. You can only use this effect of "Purifying Dance of the Mikanko" once per turn.
   de:
   es:
   fr:
