--- a/data/cards/yugipedia894437.yaml
+++ b/data/cards/yugipedia894437.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If you control a "Mikanko" monster: Target 1 face-up monster on the field; equip it with 1 appropriate Equip Spell from your Deck. If an Equip Spell(s) is sent to your GY while this card is in your GY: You can banish this card, then target 1 Equip Spell in your GY; add it to your hand. You can only use each effect of "Mikanko Catfight" once per turn.
+    If you control a "Mikanko" monster: Target 1 face-up monster on the field; equip it with 1 appropriate Equip Spell from your Deck. If an Equip Spell(s) is sent to your GY while this card is in your GY (except during the Damage Step): You can banish this card, then target 1 Equip Spell in your GY; add it to your hand. You can only use each effect of "Mikanko Catfight" once per turn.
   de:
   es:
   fr:
