--- a/data/cards/02295440.yaml
+++ b/data/cards/02295440.yaml
@@ -288,6 +288,8 @@ sets:
   - set_number: DBAD-JP040
     set_name: 'Deck Build Pack: Amazing Defenders'
     rarities:
+    - Common
+    - Normal Parallel Rare
   ko:
   - set_number: RGBT-KR045
     set_name: Raging Battle
