--- a/data/cards/32807846.yaml
+++ b/data/cards/32807846.yaml
@@ -639,9 +639,11 @@ sets:
     rarities:
     - Common
     - Super Rare
-  - set_number: DBAD-JP0??
+  - set_number: DBAD-JP039
     set_name: 'Deck Build Pack: Amazing Defenders'
     rarities:
+    - Common
+    - Normal Parallel Rare
   ko:
   - set_number: LOD-KR028
     set_name: Legacy of Darkness
