--- a/data/cards/37478723.yaml
+++ b/data/cards/37478723.yaml
@@ -90,9 +90,11 @@ sets:
     set_name: Rise of the Duelist
     rarities:
     - Rare
-  - set_number: DBAD-JP0??
+  - set_number: DBAD-JP042
     set_name: 'Deck Build Pack: Amazing Defenders'
     rarities:
+    - Common
+    - Normal Parallel Rare
   ko:
   - set_number: ROTD-KR053
     set_name: Rise of the Duelist
