--- a/data/cards/41927278.yaml
+++ b/data/cards/41927278.yaml
@@ -66,6 +66,11 @@ sets:
     set_name: Ignition Assault
     rarities:
     - Normal Rare
+  - set_number: DBAD-JP043
+    set_name: 'Deck Build Pack: Amazing Defenders'
+    rarities:
+    - Common
+    - Normal Parallel Rare
   ko:
   - set_number: IGAS-KR068
     set_name: Ignition Assault
