--- a/data/cards/56824871.yaml
+++ b/data/cards/56824871.yaml
@@ -77,9 +77,11 @@ sets:
     set_name: Premium Pack 2021
     rarities:
     - Secret Rare
-  - set_number: DBAD-JP0??
+  - set_number: DBAD-JP038
     set_name: 'Deck Build Pack: Amazing Defenders'
     rarities:
+    - Common
+    - Normal Parallel Rare
   ko:
   - set_number: PP15-KR035
     set_name: Premium Pack Vol.15
