--- a/data/cards/96399967.yaml
+++ b/data/cards/96399967.yaml
@@ -74,6 +74,11 @@ sets:
     set_name: Dawn of Majesty
     rarities:
     - Rare
+  - set_number: DBAD-JP037
+    set_name: 'Deck Build Pack: Amazing Defenders'
+    rarities:
+    - Common
+    - Normal Parallel Rare
   ko:
   - set_number: DAMA-KR016
     set_name: Dawn of Majesty
