--- a/data/cards/14602126.yaml
+++ b/data/cards/14602126.yaml
@@ -112,6 +112,8 @@ sets:
   - set_number: DBAD-JP044
     set_name: 'Deck Build Pack: Amazing Defenders'
     rarities:
+    - Common
+    - Normal Parallel Rare
   ko:
   - set_number: PHRA-KR066
     set_name: Phantom Rage
