--- a/data/cards/60303688.yaml
+++ b/data/cards/60303688.yaml
@@ -12,7 +12,7 @@ name:
   ko: 드래그마의 성녀 에클레시아
   ko_rr: Deuraegeuma-ui Seongnyeo Ekeullesia
   zh-TW:
-  zh-CN: 教导的圣女 艾克莉西娅
+  zh-CN: 教导之圣女 艾克利西亚
 text:
   en: |-
     Cannot be destroyed by battle with a monster Special Summoned from the Extra Deck. You can only use each of the following effects of "Dogmatika Ecclesia, the Virtuous" once per turn. If a monster Special Summoned from the Extra Deck is on the field: You can Special Summon this card from your hand. If this card is Normal or Special Summoned: You can activate this effect; add 1 "Dogmatika" card from your Deck to your hand, except "Dogmatika Ecclesia, the Virtuous", also you cannot Special Summon monsters from the Extra Deck for the rest of this turn.
@@ -32,10 +32,7 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 엑스트라 덱에서 특수 소환된 몬스터가 필드에 존재할 경우에 발동할 수 있다. 이 카드를 패에서 특수 소환한다. ②: 이 카드가 일반 소환 / 특수 소환에 성공했을 경우에 발동할 수 있다. 덱에서 "드래그마의 성녀 에클레시아" 이외의 "드래그마" 카드 1장을 패에 넣는다. 이 효과의 발동 후, 턴 종료시까지 자신은 엑스트라 덱에서 몬스터를 특수 소환할 수 없다. ③: 이 카드는 엑스트라 덱에서 특수 소환된 몬스터와의 전투로는 파괴되지 않는다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②的效果1回合各能使用1次。
-    ①：从额外卡组特殊召唤的怪兽在场上存在的场合才能发动。这张卡从手卡特殊召唤。
-    ②：这张卡召唤·特殊召唤成功的场合才能发动。从卡组把「教导的圣女 艾克莉西娅」以外的1张「教导」卡加入手卡。这个效果的发动后，直到回合结束时自己不能从额外卡组把怪兽特殊召唤。
-    ③：这张卡不会被和从额外卡组特殊召唤的怪兽的战斗破坏。
+    此卡名的①②效果1回合仅可各使用1次。①：场上有被从额外牌组特殊召唤的怪兽存在的情况下可以发动。从手牌将此卡特殊召唤。②：此卡召唤・特殊召唤成功的情况下可以发动。从牌组将1张"教导之圣女 艾克利西亚"以外的"教导"卡加入手牌。此效果发动后，直至回合结束时为止，自己不可从额外牌组特殊召唤怪兽。③：此卡不会因与从额外牌组中被特殊召唤的怪兽的战斗而被破坏。
 card_type: Monster
 monster_type_line: Spellcaster / Effect
 attribute: LIGHT
@@ -138,4 +135,9 @@ sets:
     set_name: Rise of the Duelist +1 Bonus Pack
     rarities:
     - Super Rare
+    - Prismatic Secret Rare
+  zh-CN:
+  - set_number: MGP5-SC005
+    set_name: Mega Pack 05
+    rarities:
     - Prismatic Secret Rare
