--- a/.github/workflows/merge.yaml
+++ b/.github/workflows/merge.yaml
@@ -30,10 +30,11 @@ jobs:
         with:
           path: aggregate
           ref: aggregate
-      - uses: actions/setup-python@v3
+      - uses: actions/setup-python@v4
         with:
           python-version: "3.8"
           cache: pip
+          cache-dependency-path: src/requirements.txt
       - run: pip install -r src/requirements.txt
       - name: Transform
         working-directory: yaml-yugi/data/cards
