--- a/.github/workflows/merge.yaml
+++ b/.github/workflows/merge.yaml
@@ -34,7 +34,7 @@ jobs:
         with:
           python-version: "3.8"
           cache: pip
-          cache-dependency-path: src/requirements.txt
+          cache-dependency-path: yaml-yugi/src/requirements.txt
       - run: pip install -r src/requirements.txt
       - name: Transform
         working-directory: yaml-yugi/data/cards
