--- a/data/cards/57416183.yaml
+++ b/data/cards/57416183.yaml
@@ -12,7 +12,7 @@ name:
   ko: 드래곤메이드의 정리정돈
   ko_rr: Deuraegonmeideu-ui Jeongnijeongdon
   zh-TW:
-  zh-CN: 半龙女仆的整理
+  zh-CN: 龙女仆的收拾整理
 text:
   en: |-
     Target 1 Dragon monster you control and 1 card your opponent controls or in their GY; return them to the hand. You can banish this card from your GY; Special Summon 1 "Dragonmaid" monster from your hand or GY in Defense Position, but return it to the hand during the End Phase. You can only use 1 "Dragonmaid Tidying" effect per turn, and only once that turn.
@@ -32,9 +32,7 @@ text:
     이 카드명의 ①②의 효과는 1턴에 1번, 어느 쪽이든 1개밖에 사용할 수 없다. ①: 자신 필드의 드래곤족 몬스터 1장과 상대의 필드 / 묘지의 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드를 주인의 패로 되돌린다. ②: 묘지의 이 카드를 제외하고 발동할 수 있다. 자신의 패 / 묘지에서 "드래곤메이드" 몬스터 1장을 고르고 수비 표시로 특수 소환한다. 이 효과로 특수 소환한 몬스터는 엔드 페이즈에 주인의 패로 되돌아간다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②的效果1回合只能有1次使用其中任意1个。
-    ①：以自己场上1只龙族怪兽和对方的场上·墓地1张卡为对象才能发动。那些卡回到持有者手卡。
-    ②：把墓地的这张卡除外才能发动。从自己的手卡·墓地选1只「半龙女仆」怪兽守备表示特殊召唤。这个效果特殊召唤的怪兽在结束阶段回到持有者手卡。
+    此卡名的①②效果1回合1次，仅可使用其中1个。①：以自己场上的1只龙族怪兽和对手场上・墓地的1张卡为对象可以发动。将该卡放回持有者的手牌。②：将墓地的此卡除外可以发动。从自己的手牌・墓地挑选1只"龙女仆"怪兽以守备表示特殊召唤。以此效果特殊召唤的怪兽于结束阶段放回持有者的手牌。
 card_type: Trap
 property: Normal
 series:
@@ -95,3 +93,8 @@ sets:
     set_name: Rise of the Duelist
     rarities:
     - Rare
+  zh-CN:
+  - set_number: MGP5-SC061
+    set_name: Mega Pack 05
+    rarities:
+    - Prismatic Secret Rare
