--- a/data/cards/79985120.yaml
+++ b/data/cards/79985120.yaml
@@ -12,7 +12,7 @@ name:
   ko: <ruby>RR<rt>레이드 랩터즈</rt></ruby>－레볼루션 팔콘－에어레이드
   ko_rr: Reideu Raepteojeu - Rebollusyeon Palkon - Eeoreideu
   zh-TW:
-  zh-CN: 急袭猛禽-革命猎鹰-大空袭
+  zh-CN: 急袭猛禽－革命猎鹰－大空袭
 text:
   en: |-
     3 Level 6 Winged Beast monsters
@@ -40,8 +40,8 @@ text:
     이 카드는 패의 "RUM(랭크 업 매직)" 마법 카드 1장을 버리고, 자신 필드의 랭크 5 이하의 "RR(레이드 랩터즈)" 엑시즈 몬스터의 위에 겹쳐 엑시즈 소환할 수도 있다. ①: 이 카드가 엑시즈 소환에 성공했을 경우, 상대 필드의 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 파괴하고, 그 공격력만큼의 데미지를 상대에게 준다. ②: 이 카드가 상대에 의해 파괴되어 묘지로 보내졌을 경우에 발동할 수 있다. 엑스트라 덱에서 "RR(레이드 랩터즈)－레볼루션 팔콘" 1장을 특수 소환하고, 이 카드를 아래에 겹쳐 엑시즈 소재로 한다.
   zh-TW:
   zh-CN: |-
-    鸟兽族6星怪兽×3
-    这张卡也能把手卡1张「升阶魔法」魔法卡丢弃，在自己场上的5阶以下的「急袭猛禽」XYZ怪兽上面重叠来XYZ召唤。①：这张卡XYZ召唤成功的场合，以对方场上1只怪兽为对象才能发动。那只怪兽破坏，给与对方那个攻击力数值的伤害。②：这张卡被对方破坏送去墓地的场合才能发动。从额外卡组把1只「急袭猛禽-革命猎鹰-大空袭」特殊召唤，把这张卡在下面重叠作为XYZ素材。
+    鸟兽族等级6怪兽×3
+    此卡也可舍弃手牌的1张"升阶魔法"魔法卡，来重叠在自己场上阶级5以下的"急袭猛禽"超量怪兽上面超量召唤。①：此卡超量召唤成功的情况下，以对手场上的1只怪兽为对象可以发动。破坏该怪兽，给予对手相当于其攻击力数值的伤害。②：此卡因对手被破坏并被送至墓地的情况下可以发动。从额外牌组将1只"急袭猛禽－革命猎鹰"特殊召唤，将此卡重叠在下方作为超量素材。
 card_type: Monster
 monster_type_line: Winged Beast / Xyz / Effect
 attribute: DARK
@@ -89,3 +89,8 @@ sets:
     - Normal Parallel Rare
     - Ultra Rare
     - Secret Rare
+  zh-CN:
+  - set_number: MGP5-SC195
+    set_name: Mega Pack 05
+    rarities:
+    - Super Rare
