--- a/data/cards/33017655.yaml
+++ b/data/cards/33017655.yaml
@@ -106,7 +106,7 @@ sets:
     rarities:
     - Common
   - set_number: SR13-JPP05
-    set_name: "Structure Deck R: Devil's Gate"
+    set_name: "Structure Deck R: Devil's Gate The Doors of the Abyss Opened Pack"
     rarities:
     - Super Rare
     - Secret Rare
