--- a/data/cards/34230233.yaml
+++ b/data/cards/34230233.yaml
@@ -146,7 +146,7 @@ sets:
     rarities:
     - Ultra Rare
   - set_number: SR13-JPP03
-    set_name: "Structure Deck R: Devil's Gate Opened Door of the Abyss Pack"
+    set_name: "Structure Deck R: Devil's Gate The Doors of the Abyss Opened Pack"
     rarities:
     - Super Rare
     - Secret Rare
