--- a/data/cards/60228941.yaml
+++ b/data/cards/60228941.yaml
@@ -91,7 +91,7 @@ sets:
     rarities:
     - Super Rare
   - set_number: SR13-JPP04
-    set_name: "Structure Deck R: Devil's Gate"
+    set_name: "Structure Deck R: Devil's Gate The Doors of the Abyss Opened Pack"
     rarities:
     - Super Rare
     - Secret Rare
