--- a/data/cards/65956182.yaml
+++ b/data/cards/65956182.yaml
@@ -33,7 +33,7 @@ series:
 sets:
   ja:
   - set_number: SR13-JPP02
-    set_name: "Structure Deck R: Devil's Gate Opened Door of the Abyss Pack"
+    set_name: "Structure Deck R: Devil's Gate The Doors of the Abyss Opened Pack"
     rarities:
     - Super Rare
     - Secret Rare
