--- a/data/cards/90488465.yaml
+++ b/data/cards/90488465.yaml
@@ -32,7 +32,7 @@ text:
     이 카드느 통상 소환할 수 없다. 자신 묘지에서 빛 속성과 어둠 속성 몬스터를 1장씩 제외했을 경우에 특수 소환할 수 있다. 이 카드명의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 패에서 특수 소환한 이 카드가 존재할 경우, 제외되어 있는 자신 및 상대 몬스터 중에서 합계 3장을 대상으로 하고 발동할 수 있다(같은 이름의 카드는 1장까지). 그 중의 1장을 자신 필드에 특수 소환하고, 나머지를 좋아하는 순서대로 주인의 덱 맨 아래로 되돌린다.
   zh-TW:
   zh-CN: |-
-    这张卡不能通常召唤。从自己墓地把光属性和暗属性的怪兽各1只除外可以从手卡特殊召唤。这张卡是从手卡特殊召唤的场合：可以从除外的自己以及对方的怪兽之中以合计3只卡名不同的怪兽为对象；那之内的1只在自己场上特殊召唤，剩下的怪兽用喜欢的顺序回到持有者卡组最下面。「混沌创世神」的这个效果1回合只能使用1次。
+    此卡不可通常召唤。将自己墓地中光属性与暗属性怪兽各1只除外的情况下可以特殊召唤。此卡名的效果1回合仅可使用1次。①：从手牌特殊召唤的此卡存在的情况下，从自己及对手被除外的怪兽中以合计3只为对象可以发动（同名卡最多1张）。将其中1只特殊召唤至自己场上，剩余的以喜欢的顺序放回持有者牌组的最下面。
 card_type: Monster
 monster_type_line: Thunder / Effect
 attribute: DARK
@@ -84,5 +84,10 @@ sets:
     set_name: World Premiere Pack 2020
     rarities:
     - Ultra Rare
+    - Secret Rare
+  zh-CN:
+  - set_number: MGP5-SC181
+    set_name: Mega Pack 05
+    rarities:
     - Secret Rare
 yugipedia_page_id: '721355'
