--- a/data/cards/84211599.yaml
+++ b/data/cards/84211599.yaml
@@ -32,8 +32,7 @@ text:
     이 카드명의 카드는 1턴에 1장밖에 발동할 수 없으며, 이 카드를 발동하는 턴에 자신은 카드의 효과로 드로우할 수 없다. ①: 자신의 엑스트라 덱의 카드 3장 또는 6장을 뒷면 표시로 제외하고 발동할 수 있다. 제외한 수만큼 자신의 덱 위에서 카드를 넘기고, 그 중에서 1장을 골라 패에 넣고, 남은 카드를 좋아하는 순서대로 덱 맨 아래로 되돌린다. 이 카드의 발동 후, 턴 종료시까지 상대가 받는 모든 데미지는 절반이 된다.
   zh-TW:
   zh-CN: |-
-    这个卡名的卡在1回合只能发动1张，这张卡发动的回合，自己不能用卡的效果抽卡。
-    ①：把自己的额外卡组3张或者6张卡里侧表示除外才能发动。把除外数量的卡从自己卡组上面翻开，从那之中选1张加入手卡，剩下的卡用喜欢的顺序回到卡组最下面。这张卡的发动后，直到回合结束时对方受到的全部伤害变成一半。
+    此卡名的卡1回合仅可发动1张，发动此卡的回合中，自己不可以卡的效果抽牌。①：将自己额外牌组的3张或6张卡以里侧表示除外可以发动。依除外的数量，从自己的牌组上面翻开卡，从其中挑选1张加入手牌，剩余的卡以喜欢的顺序放回牌组最下面。此卡发动后，直至回合结束时为止，对手受到的所有伤害变为一半。
 card_type: Spell
 property: Normal
 series:
@@ -92,5 +91,10 @@ sets:
     set_name: Blazing Vortex +1 Bonus Pack
     rarities:
     - Super Rare
+    - Prismatic Secret Rare
+  zh-CN:
+  - set_number: MGP5-SC157
+    set_name: Mega Pack 05
+    rarities:
     - Prismatic Secret Rare
 yugipedia_page_id: '775120'
