--- a/data/cards/51697825.yaml
+++ b/data/cards/51697825.yaml
@@ -12,7 +12,7 @@ name:
   ko: 잭 인 더 핸드
   ko_rr:
   zh-TW:
-  zh-CN: 吓人手中盒
+  zh-CN: 吓人的手中杰克
 text:
   en: |-
     Reveal 3 Level 1 monsters with different names from your Deck, your opponent adds 1 to their hand, you add 1 to your hand, and you shuffle the third into the Deck. You can only activate 1 "Jack-In-The-Hand" per turn.
@@ -32,8 +32,7 @@ text:
     이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 덱에서 카드명이 다른 레벨 1 몬스터 3장을 상대에게 보여주고, 상대는 그 중에서 1장을 골라 자신의 패에 넣는다. 자신은 남은 카드 중에서 1장을 고르고 패에 넣고, 남은 카드를 덱으로 되돌린다.
   zh-TW:
   zh-CN: |-
-    这个卡名的卡在1回合只能发动1张。
-    ①：从卡组把3只卡名不同的1星怪兽给对方观看，对方从那之中选1只加入自身手卡。自己从剩下的卡之中选1只加入手卡，剩余回到卡组。
+    此卡名的卡1回合仅可发动1张。①：从牌组将卡名不同的3只等级1怪兽出示给对手，对手从其中挑选1只加入自身的手牌。自己从剩余的卡中挑选1只加入手牌，剩余的放回牌组。
 card_type: Spell
 property: Normal
 sets:
@@ -92,4 +91,9 @@ sets:
     set_name: Phantom Rage
     rarities:
     - Normal Rare
+  zh-CN:
+  - set_number: MGP5-SC104
+    set_name: Mega Pack 05
+    rarities:
+    - Rare
 yugipedia_page_id: '764389'
