--- a/data/cards/63394872.yaml
+++ b/data/cards/63394872.yaml
@@ -6,7 +6,7 @@ name:
   es: Interruptor de Senet
   fr: Commutateur Senet
   it: Scambio Senet
-  pt:
+  pt: Troca de Senet
   ja: ポジションチェンジ
   ja_romaji: Pojishon Chenji
   ko: 포지션 체인지
@@ -24,7 +24,8 @@ text:
     Une fois par tour, durant votre Main Phase, vous pouvez déplacer 1 monstre sur votre Terrain vers une Zone Carte Monstre adjacente inoccupée.
   it: |-
     Una volta per turno, durante la tua Main Phase, puoi spostare 1 mostro sul tuo Terreno in una Zona Mostro libera adiacente.
-  pt:
+  pt: |-
+    Uma vez por turno: você pode escolher 1 monstro na sua Zona de Monstros Principal e selecionar 1 das suas Zonas de Monstros não utilizadas adjacentes (horizontal); mova o alvo para a zona adjacente selecionada.
   ja: |-
     ①：１ターンに１度、自分のメインモンスターゾーンのモンスター１体を対象とし、その隣の使用していないモンスターゾーンを１ヵ所指定して発動できる。その自分のモンスターの位置を、隣の指定したゾーンに移動する。
   ko: |-
