--- a/data/cards/74889525.yaml
+++ b/data/cards/74889525.yaml
@@ -12,7 +12,7 @@ name:
   ko: 엘 레이 콘키스타 엘드리치
   ko_rr: El Rei Konkiseuta Eldeurichi
   zh-TW:
-  zh-CN: 黄金狂 黄金国巫妖
+  zh-CN: 征服王・黄金狂埃尔德里奇
 text:
   en: |-
     1 "Eldlich" monster + 1 Level 5 or higher Zombie monster
@@ -40,11 +40,8 @@ text:
     이 카드명의 ③의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드는 몬스터 존에 존재하는 한, 카드명을 "황금경 엘드리치"로 취급한다. ②: 필드의 이 카드는 전투 / 효과로는 파괴되지 않는다. ③: 자신 필드의 언데드족 몬스터 1장을 릴리스하고, 상대 필드의 앞면 표시 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 몬스터의 컨트롤을 얻는다. 그 몬스터는 턴 종료시까지, 공격할 수 없으며 효과를 발동할 수 없다.
   zh-TW:
   zh-CN: |-
-    「黄金国巫妖」怪兽＋5星以上的不死族怪兽
-    这个卡名的③的效果1回合只能使用1次。
-    ①：这张卡只要在怪兽区域存在，卡名当作「黄金卿 黄金国巫妖」使用。
-    ②：场上的这张卡不会被战斗·效果破坏。
-    ③：把自己场上1只不死族怪兽解放，以对方场上1只表侧表示怪兽为对象才能发动。得到那只怪兽的控制权。那只怪兽直到回合结束时不能攻击，不能把效果发动。
+    "埃尔德里奇"怪兽＋等级5以上的不死族怪兽
+    此卡名的③效果1回合仅可使用1次。①：只要此卡存在于怪兽区域，卡名视为"黄金卿埃尔德里奇"。②：场上的此卡不会因战斗・效果被破坏。③：解放自己场上的1只不死族怪兽，以对手场上的1只表侧表示怪兽为对象可以发动。获得该怪兽的控制权。该怪兽直至回合结束时为止，不可攻击，不可发动效果。
 card_type: Monster
 monster_type_line: Zombie / Fusion / Effect
 attribute: LIGHT
@@ -126,4 +123,9 @@ sets:
     rarities:
     - Ultra Rare
     - Prismatic Secret Rare
+  zh-CN:
+  - set_number: MGP5-SC136
+    set_name: Mega Pack 05
+    rarities:
+    - Secret Rare
 yugipedia_page_id: '772783'
