--- a/data/cards/82184400.yaml
+++ b/data/cards/82184400.yaml
@@ -7,8 +7,8 @@ name:
   fr: Garde des Abysses
   it: Custode dell'Abisso
   pt: Defensor do Abismo
-  ja:
-  ja_romaji:
+  ja: アビス・オーパー
+  ja_romaji: Abisu Ōpā
   ko:
   ko_rr:
   zh-TW:
@@ -49,6 +49,8 @@ link_arrows:
 - ↘
 atk: 1500
 materials: 2 WATER monsters
+series:
+- Abyss-
 sets:
   en:
   - set_number: BODE-EN083
@@ -75,4 +77,8 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Common
+  ja:
+  - set_number: WPP3-JP042
+    set_name: World Premiere Pack 2022
+    rarities:
 yugipedia_page_id: '836288'
