--- a/data/cards/35252119.yaml
+++ b/data/cards/35252119.yaml
@@ -12,7 +12,7 @@ name:
   ko: 전뇌계수－쥬쥬
   ko_rr: Jeon-goegyesu - Jyu Jyu
   zh-TW:
-  zh-CN: 电脑堺兽-鹫鹫
+  zh-CN: 电脑堺兽－鹫鹫
 text:
   en: |-
     1 Tuner + 1+ non-Tuner monsters
@@ -40,10 +40,8 @@ text:
     이 카드명의 ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 원래의 종족 / 속성이 같고 카드명이 다른 몬스터가 자신 묘지에 2장 이상 존재하는 한, 필드의 이 카드는 전투 / 효과로는 파괴되지 않는다. ②: 원래의 종족 / 속성이 같고 카드명이 다른 몬스터 2장을 자신 묘지에서 제외하고, 필드의 카드 1장을 대상으로 하여 발동할 수 있다. 그 카드를 묘지로 보낸다.
   zh-TW:
   zh-CN: |-
-    调整＋调整以外的怪兽1只以上
-    这个卡名的②的效果1回合只能使用1次。
-    ①：只要原本的种族·属性相同而卡名不同的怪兽在自己墓地有2只以上存在，场上的这张卡不会被战斗·效果破坏。
-    ②：把原本的种族·属性相同而卡名不同的2只怪兽从自己墓地除外，以场上1张卡为对象才能发动。那张卡送去墓地。
+    协调＋1只以上协调以外的怪兽
+    此卡名的②效果1回合仅可使用1次。①：只要原本种族・属性相同、卡名不同的怪兽在自己的墓地有2只以上存在，场上的此卡不会因战斗・效果被破坏。②：将2只原本种族・属性相同、卡名不同的怪兽从自己的墓地除外，以场上的1张卡为对象可以发动。将该卡送至墓地。
 card_type: Monster
 monster_type_line: Psychic / Synchro / Effect
 attribute: WIND
@@ -108,5 +106,10 @@ sets:
     set_name: Premium Pack Vol.15
     rarities:
     - Normal Parallel Rare
+    - Super Rare
+  zh-CN:
+  - set_number: MGP5-SC191
+    set_name: Mega Pack 05
+    rarities:
     - Super Rare
 yugipedia_page_id: '719238'
