--- a/data/cards/13069066.yaml
+++ b/data/cards/13069066.yaml
@@ -6,7 +6,7 @@ name:
   es: Brazo de Espada de Dragón
   fr: Dragon Bras d'Épée
   it: Braccio Spada di Drago
-  pt: Dragão Armado de Espada
+  pt: Dragão de Cauda Assassina
   ja: <ruby>剣竜<rt>ソード・ドラゴン</rt></ruby>
   ja_romaji: Sōdo Doragon
   ko:
