--- a/data/cards/43378048.yaml
+++ b/data/cards/43378048.yaml
@@ -4,7 +4,7 @@ name:
   en: Armityle the Chaos Phantasm
   de: Armityle das Chaosphantasma
   es: Armityle, el Fantasma del Caos
-  fr: Armityle le Specter du Chaos
+  fr: Armityle le Spectre du Chaos
   it: Armityle il Fantasma del Chaos
   pt: Armityle, o Fantasma do Caos
   ja: <ruby>混<rt>こん</rt></ruby><ruby>沌<rt>とん</rt></ruby><ruby>幻<rt>げん</rt></ruby><ruby>魔<rt>ま</rt></ruby>アーミタイル
