--- a/data/cards/45778932.yaml
+++ b/data/cards/45778932.yaml
@@ -34,7 +34,7 @@ text:
   zh-CN: |-
     场上表侧表示存在的风属性的怪兽攻击力上升500，守备力下降400。
 card_type: Spell
-property: Field
+property: Continuous
 series:
 - Attribute Booster
 sets:
