--- a/data/cards/55948544.yaml
+++ b/data/cards/55948544.yaml
@@ -1,7 +1,7 @@
 konami_id: 5753
 password: 55948544
 name:
-  en: Judgment of Pharaoh
+  en: Judgment of the Pharaoh
   de: Urteil des Pharaoh
   es: Sentencia del Faraón
   fr: Jugement du Pharaon
