--- a/data/cards/72537897.yaml
+++ b/data/cards/72537897.yaml
@@ -4,7 +4,7 @@ name:
   en: Obedience Schooled
   de: Hundeschule
   es: Enseñando Obediencia
-  fr: Obéissance Scolarisé
+  fr: Obéissance Scolarisée
   it: Obbedienza Insegnata
   pt: Obediência Ensinada
   ja: <ruby>魔<rt>ま</rt></ruby><ruby>獣<rt>じゅう</rt></ruby>の<ruby>懐<rt>かい</rt></ruby><ruby>柔<rt>じゅう</rt></ruby>
