--- a/data/cards/49456901.yaml
+++ b/data/cards/49456901.yaml
@@ -5,7 +5,7 @@ name:
   de: 'Nummer C104: Schattenhorror Maskerade'
   es: 'Número C104: Horror de las Sombras Mascarada'
   fr: "Numéro C104 : Mascarade Horreur de l'Ombre"
-  it: 'Numero C104: Masquerade Signore Umbral'
+  it: 'Numero C104: Masquerade Orrore Umbral'
   pt: 'Número C104: Terror Umbral Mascarado'
   ja: <ruby>Ｃ<rt>カオス</rt></ruby><ruby>Ｎｏ．<rt>ナンバーズ</rt></ruby>１０４ <ruby>仮面魔踏士<rt>マスカレード・マジシャン</rt></ruby>アンブラル
   ja_romaji: Kaosu Nanbāzu Hyakuyon Masukarēdo Majishan Anburaru
