--- a/data/cards/99724761.yaml
+++ b/data/cards/99724761.yaml
@@ -4,7 +4,7 @@ name:
   en: XZ-Tank Cannon
   de: XZ-Kanonenpanzer
   es: XZ-Tanque Cañón
-  fr: Canon Tank XZ
+  fr: Canon Tank-XZ
   it: XZ-Cannone Carroarmato
   pt: XZ - Dragão Canhão
   ja: <ruby>ＸＺ<rt>エックスゼット</rt></ruby>－キャタピラー・キャノン
